--- a/app/src/main/res/xml/button_cancel_scene.xml
+++ b/app/src/main/res/xml/button_cancel_scene.xml
@@ -1,59 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <MotionScene xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:motion="http://schemas.android.com/apk/res-auto">
-
-    <!-- First anim on recycler view -->
-    <Transition
-        motion:constraintSetStart="@+id/startFirstPart"
-        motion:constraintSetEnd="@+id/endFirstPart"
-        motion:duration="1000">
-    </Transition>
-
-    <ConstraintSet android:id="@+id/startFirstPart">
-        <Constraint
-            android:id="@+id/rvMotion"
-            android:layout_marginEnd="-900dp"
-            style="@style/rvStyle"
-            />
-    </ConstraintSet>
-
-    <ConstraintSet android:id="@+id/endFirstPart">
-        <Constraint
-            android:id="@+id/rvMotion"
-            android:layout_marginEnd="-400dp"
-            style="@style/rvStyle"
-            />
-    </ConstraintSet>
-
-    <!-- Second anim on recycler view -->
-    <Transition
-        motion:constraintSetStart="@+id/startSecondPart"
-        motion:constraintSetEnd="@+id/endSecondPart"
-        motion:duration="1000">
-    </Transition>
-
-    <ConstraintSet android:id="@+id/startSecondPart">
-        <Constraint
-            android:id="@+id/rvMotion"
-            android:layout_marginEnd="-400dp"
-            style="@style/rvStyle"
-            />
-    </ConstraintSet>
-
-    <ConstraintSet android:id="@+id/endSecondPart">
-        <Constraint
-            android:id="@+id/rvMotion"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            motion:layout_constraintEnd_toEndOf="parent"
-            motion:layout_constraintTop_toTopOf="parent"
-            motion:layout_constraintBottom_toBottomOf="parent" />
-    </ConstraintSet>
-
     <!-- First anim on Cancel button -->
     <Transition
         motion:constraintSetStart="@+id/startFirstCancelAnim"
         motion:constraintSetEnd="@+id/endFirstCancelAnim"
+        motion:duration="1000">
+    </Transition>
+    <Transition
+        motion:constraintSetStart="@+id/endFirstCancelAnim"
+        motion:constraintSetEnd="@+id/startFirstCancelAnim"
         motion:duration="1000">
     </Transition>
 
@@ -69,6 +25,7 @@
     <ConstraintSet android:id="@+id/endFirstCancelAnim">
         <Constraint
             android:id="@+id/buttonCancel"
+            android:layout_marginEnd="@dimen/small_padding"
             motion:layout_constraintEnd_toEndOf="parent"
             style="@style/buttonCancel"
             />
@@ -80,11 +37,17 @@
         motion:constraintSetEnd="@+id/endSecondCancelAnim"
         motion:duration="1000">
     </Transition>
+    <Transition
+        motion:constraintSetStart="@+id/endSecondCancelAnim"
+        motion:constraintSetEnd="@+id/startSecondCancelAnim"
+        motion:duration="1000">
+    </Transition>
 
     <ConstraintSet android:id="@+id/startSecondCancelAnim">
         <Constraint
             android:id="@+id/buttonCancel"
             motion:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="@dimen/small_padding"
             style="@style/buttonCancel"
             />
     </ConstraintSet>
@@ -93,6 +56,7 @@
         <Constraint
             android:id="@+id/buttonCancel"
             motion:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="@dimen/small_padding"
             style="@style/buttonCancel"
             />
     </ConstraintSet>
