--- a/app/src/main/res/layout/activity_round_timer.xml
+++ b/app/src/main/res/layout/activity_round_timer.xml
@@ -1,9 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.activity.RoundTimer">
+
+    <ProgressBar
+        android:id="@+id/circular_determinative_pb"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:indeterminateOnly="false"
+        android:progressDrawable="@drawable/pb_circular_determinative"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:progress="70"
+        tools:secondaryProgress="90"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/progress_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@android:color/black"
+        app:layout_constraintBottom_toBottomOf="@+id/circular_determinative_pb"
+        app:layout_constraintEnd_toEndOf="@+id/circular_determinative_pb"
+        app:layout_constraintStart_toStartOf="@+id/circular_determinative_pb"
+        app:layout_constraintTop_toTopOf="@+id/circular_determinative_pb"
+        tools:text="70%" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
