--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -30,4 +30,17 @@
         <item name="android:text">Cancel</item>
     </style>
 
+    <style name="tvAnimTitle">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:text">Watch Next</item>
+        <item name="android:textSize">18sp</item>
+    </style>
+
+    <style name="itemStyle">
+        <item name="android:layout_width">64dp</item>
+        <item name="android:layout_height">64dp</item>
+    </style>
+
 </resources>
