--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -38,6 +38,41 @@
         <item name="android:textSize">18sp</item>
     </style>
 
+
+
+    <style name="tvAnimTitleAll">
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_marginHorizontal">@dimen/medium_padding</item>
+        <item name="layout_constraintBottom_toTopOf">@+id/rvMotionAll</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:text">Watch Next</item>
+        <item name="android:textSize">18sp</item>
+    </style>
+
+    <style name="rvStyleAll">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginBottom">@dimen/big_padding</item>
+        <item name="layout_constraintStart_toStartOf">parent</item>
+        <item name="layout_constraintEnd_toEndOf">parent</item>
+        <item name="layout_constraintTop_toTopOf">parent</item>
+        <item name="layout_constraintBottom_toBottomOf">parent</item>
+    </style>
+
+    <style name="buttonCancelAll">
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginStart">@dimen/medium_padding</item>
+        <item name="android:layout_width">120dp</item>
+        <item name="android:layout_marginHorizontal">@dimen/medium_padding</item>
+        <item name="layout_constraintTop_toBottomOf">@+id/rvMotionAll</item>
+        <item name="android:text">Cancel</item>
+    </style>
+
+
+
+
+
     <style name="itemStyle">
         <item name="android:layout_width">64dp</item>
         <item name="android:layout_height">64dp</item>
