--- a/app/src/main/res/layout/item_movie.xml
+++ b/app/src/main/res/layout/item_movie.xml
@@ -1,12 +1,19 @@
-<androidx.cardview.widget.CardView
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/cardView"
     android:layout_width="200dp"
-    android:layout_height="150dp"
-    android:layout_margin="16dp"
-    app:cardCornerRadius="20dp"
+    android:layout_height="wrap_content"
+    android:layout_marginEnd="@dimen/small_padding"
+    android:clipChildren="false"
+    >
+
+<androidx.cardview.widget.CardView
+    android:id="@+id/cardView"
+    android:layout_width="0dp"
+    android:layout_height="0dp"
+    app:layout_constraintDimensionRatio="16:11"
+    app:cardCornerRadius="8dp"
     app:cardElevation="8dp"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
@@ -52,3 +59,6 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
