--- a/app/src/main/res/layout/activity_all_anims.xml
+++ b/app/src/main/res/layout/activity_all_anims.xml
@@ -43,7 +43,7 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvMotionAll"
             android:layout_height="200dp"
-            style="@style/rvStyle"
+            style="@style/rvStyleAll"
             />
 
         <Button
