--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -43,7 +43,8 @@
     <style name="tvAnimTitleAll">
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_marginHorizontal">@dimen/medium_padding</item>
+        <item name="android:layout_marginStart">@dimen/small_padding</item>
+        <item name="android:layout_marginBottom">@dimen/medium_padding</item>
         <item name="layout_constraintBottom_toTopOf">@+id/rvMotionAll</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:text">Watch Next</item>
@@ -62,9 +63,9 @@
 
     <style name="buttonCancelAll">
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_marginStart">@dimen/medium_padding</item>
         <item name="android:layout_width">120dp</item>
-        <item name="android:layout_marginHorizontal">@dimen/medium_padding</item>
+        <item name="android:layout_marginStart">@dimen/small_padding</item>
+        <item name="android:layout_marginTop">@dimen/medium_padding</item>
         <item name="layout_constraintTop_toBottomOf">@+id/rvMotionAll</item>
         <item name="android:text">Cancel</item>
     </style>
