--- a/app/src/main/res/xml/all_anims_scene.xml
+++ b/app/src/main/res/xml/all_anims_scene.xml
@@ -4,106 +4,100 @@
 
     <!-- First Animation -->
     <Transition
-        motion:constraintSetStart="@+id/startFirstAllAnim"
         motion:constraintSetEnd="@+id/endFirstAllAnim"
-        motion:duration="1000">
-    </Transition>
+        motion:constraintSetStart="@+id/startFirstAllAnim"
+        motion:duration="1000"/>
     <Transition
-        motion:constraintSetStart="@+id/endFirstAllAnim"
         motion:constraintSetEnd="@+id/startFirstAllAnim"
-        motion:duration="1000">
-    </Transition>
+        motion:constraintSetStart="@+id/endFirstAllAnim"
+        motion:duration="1000"/>
 
     <ConstraintSet android:id="@+id/startFirstAllAnim">
         <Constraint
             android:id="@+id/tvAnimTitleAll"
             style="@style/tvAnimTitleAll"
             android:layout_marginEnd="-100dp"
-            motion:layout_constraintEnd_toEndOf="parent"
-            />
+            motion:layout_constraintEnd_toEndOf="parent" />
         <Constraint
             android:id="@+id/rvMotionAll"
-            android:layout_marginEnd="-900dp"
             style="@style/rvStyleAll"
-            />
+            android:layout_marginEnd="-900dp" />
         <Constraint
             android:id="@+id/buttonCancelAll"
-            android:layout_marginEnd="-200dp"
-            motion:layout_constraintEnd_toEndOf="parent"
             style="@style/buttonCancelAll"
-            />
+            android:layout_marginEnd="-200dp"
+            motion:layout_constraintEnd_toEndOf="parent" />
     </ConstraintSet>
 
     <ConstraintSet android:id="@+id/endFirstAllAnim">
         <Constraint
             android:id="@+id/tvAnimTitleAll"
             style="@style/tvAnimTitleAll"
-            motion:layout_constraintLeft_toLeftOf="@+id/rvMotionAll"
-            android:layout_marginStart="@dimen/medium_padding"
-            />
+            motion:layout_constraintLeft_toLeftOf="@+id/rvMotionAll" />
         <Constraint
             android:id="@+id/rvMotionAll"
-            android:layout_marginEnd="-400dp"
             style="@style/rvStyleAll"
-            />
+            android:layout_marginEnd="-400dp" />
         <Constraint
             android:id="@+id/buttonCancelAll"
             style="@style/buttonCancelAll"
-            motion:layout_constraintLeft_toLeftOf="@+id/rvMotionAll"
-            android:layout_marginStart="@dimen/medium_padding"
-            />
+            motion:layout_constraintLeft_toLeftOf="@+id/rvMotionAll" />
     </ConstraintSet>
 
     <!-- Second Animation -->
+
     <Transition
-        motion:constraintSetStart="@+id/startSecondAllAnim"
-        motion:constraintSetEnd="@+id/endSecondAllAnim"
-        motion:duration="1000">
-    </Transition>
-    <Transition
-        motion:constraintSetStart="@+id/endSecondAllAnim"
         motion:constraintSetEnd="@+id/startSecondAllAnim"
+        motion:constraintSetStart="@+id/endSecondAllAnim"
         motion:duration="1000">
+        <onSwipe
+            motion:dragDirection="dragLeft"
+            motion:touchAnchorId="@id/tvAnimTitleAll"
+            motion:touchAnchorSide="left" />
+        <onSwipe
+            motion:dragDirection="dragLeft"
+            motion:touchAnchorId="@id/rvMotionAll"
+            motion:touchAnchorSide="right" />
+        <onSwipe
+            motion:dragDirection="dragRight"
+            motion:touchAnchorId="@id/buttonCancelAll"
+            motion:touchAnchorSide="right" />
     </Transition>
+
+    <Transition
+        motion:constraintSetEnd="@+id/endSecondAllAnim"
+        motion:constraintSetStart="@+id/startSecondAllAnim"
+        motion:duration="1000" />
+
 
     <ConstraintSet android:id="@+id/startSecondAllAnim">
         <Constraint
             android:id="@+id/tvAnimTitleAll"
             style="@style/tvAnimTitleAll"
-            motion:layout_constraintLeft_toLeftOf="@+id/rvMotionAll"
-            android:layout_marginStart="@dimen/medium_padding"
-            />
+            motion:layout_constraintLeft_toLeftOf="@+id/rvMotionAll" />
         <Constraint
             android:id="@+id/rvMotionAll"
-            android:layout_marginEnd="-400dp"
             style="@style/rvStyleAll"
-            />
+            android:layout_marginEnd="-400dp" />
         <Constraint
             android:id="@+id/buttonCancelAll"
             style="@style/buttonCancelAll"
-            motion:layout_constraintLeft_toLeftOf="@+id/rvMotionAll"
-            android:layout_marginStart="@dimen/medium_padding"
-            />
+            motion:layout_constraintLeft_toLeftOf="@+id/rvMotionAll" />
     </ConstraintSet>
 
     <ConstraintSet android:id="@+id/endSecondAllAnim">
         <Constraint
             android:id="@+id/tvAnimTitleAll"
             style="@style/tvAnimTitleAll"
-            motion:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="@dimen/medium_padding"
-            />
+            motion:layout_constraintStart_toStartOf="parent" />
         <Constraint
             android:id="@+id/rvMotionAll"
-            style="@style/rvStyleAll"
-            />
+            style="@style/rvStyleAll" />
 
         <Constraint
             android:id="@+id/buttonCancelAll"
             style="@style/buttonCancelAll"
-            motion:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="@dimen/medium_padding"
-            />
+            motion:layout_constraintStart_toStartOf="parent" />
     </ConstraintSet>
 
 </MotionScene>
