--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -39,19 +39,20 @@
     </style>
 
 
+    <style name="MotionLayout"/>
 
-    <style name="tvAnimTitleAll">
+    <style name="MotionLayout.binge_widget_title">
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_marginStart">@dimen/small_padding</item>
         <item name="android:layout_marginBottom">@dimen/medium_padding</item>
-        <item name="layout_constraintBottom_toTopOf">@+id/rvMotionAll</item>
+        <item name="layout_constraintBottom_toTopOf">@+id/binge_watch_rail</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:text">Watch Next</item>
         <item name="android:textSize">18sp</item>
     </style>
 
-    <style name="rvStyleAll">
+    <style name="MotionLayout.binge_widget_rail">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginBottom">@dimen/big_padding</item>
@@ -61,12 +62,12 @@
         <item name="layout_constraintBottom_toBottomOf">parent</item>
     </style>
 
-    <style name="buttonCancelAll">
+    <style name="MotionLayout.binge_widget_cancel_button">
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_width">120dp</item>
         <item name="android:layout_marginStart">@dimen/small_padding</item>
         <item name="android:layout_marginTop">@dimen/medium_padding</item>
-        <item name="layout_constraintTop_toBottomOf">@+id/rvMotionAll</item>
+        <item name="layout_constraintTop_toBottomOf">@+id/binge_watch_rail</item>
         <item name="android:text">Cancel</item>
     </style>
 
