--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -46,7 +46,7 @@
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_marginStart">@dimen/small_padding</item>
         <item name="android:layout_marginBottom">@dimen/medium_padding</item>
-        <item name="layout_constraintBottom_toTopOf">@+id/binge_watch_rail</item>
+        <item name="layout_constraintBottom_toTopOf">@+id/binge_widget_rail</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:text">Watch Next</item>
         <item name="android:textSize">18sp</item>
@@ -56,8 +56,6 @@
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginBottom">@dimen/big_padding</item>
-        <item name="layout_constraintStart_toStartOf">parent</item>
-        <item name="layout_constraintEnd_toEndOf">parent</item>
         <item name="layout_constraintTop_toTopOf">parent</item>
         <item name="layout_constraintBottom_toBottomOf">parent</item>
     </style>
@@ -67,7 +65,7 @@
         <item name="android:layout_width">120dp</item>
         <item name="android:layout_marginStart">@dimen/small_padding</item>
         <item name="android:layout_marginTop">@dimen/medium_padding</item>
-        <item name="layout_constraintTop_toBottomOf">@+id/binge_watch_rail</item>
+        <item name="layout_constraintTop_toBottomOf">@+id/binge_widget_rail</item>
         <item name="android:text">Cancel</item>
     </style>
 
