--- a/app/src/main/res/layout/activity_all_anims.xml
+++ b/app/src/main/res/layout/activity_all_anims.xml
@@ -27,31 +27,36 @@
     </LinearLayout>
 
     <androidx.constraintlayout.motion.widget.MotionLayout
+        android:id="@+id/binge_widget_motionLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layoutDescription="@xml/binge_widget_rail_animations"
-        android:id="@+id/binge_widget_motionLayout"
-        tools:showPaths="true"
         tools:background="#B8B8B8"
-        >
+        tools:showPaths="true">
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.8" />
 
         <TextView
             android:id="@+id/binge_widget_title"
             style="@style/MotionLayout.binge_widget_title"
-            app:layout_constraintLeft_toLeftOf="@+id/binge_widget_rail"
-            />
+            app:layout_constraintBottom_toTopOf="@+id/binge_widget_rail"
+            app:layout_constraintLeft_toLeftOf="@+id/binge_widget_rail" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/binge_widget_rail"
             style="@style/MotionLayout.binge_widget_rail"
-            android:layout_height="200dp"
-            />
+            android:nestedScrollingEnabled="false" />
 
         <Button
             android:id="@+id/binge_widget_cancel_button"
             style="@style/MotionLayout.binge_widget_cancel_button"
-            app:layout_constraintLeft_toLeftOf="@+id/binge_widget_rail"
-            />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="@+id/binge_widget_rail" />
 
     </androidx.constraintlayout.motion.widget.MotionLayout>
 </LinearLayout>
