--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -14,30 +14,6 @@
         <!-- Customize your theme here. -->
     </style>
 
-    <style name="rvStyle">
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="layout_constraintStart_toStartOf">parent</item>
-        <item name="layout_constraintEnd_toEndOf">parent</item>
-        <item name="layout_constraintTop_toTopOf">parent</item>
-        <item name="layout_constraintBottom_toBottomOf">parent</item>
-    </style>
-
-    <style name="buttonCancel">
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_width">120dp</item>
-        <item name="android:layout_marginHorizontal">@dimen/medium_padding</item>
-        <item name="android:text">Cancel</item>
-    </style>
-
-    <style name="tvAnimTitle">
-        <item name="android:textColor">@color/black</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:text">Watch Next</item>
-        <item name="android:textSize">18sp</item>
-    </style>
-
 
     <style name="MotionLayout"/>
 
@@ -46,7 +22,6 @@
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_marginStart">@dimen/small_padding</item>
         <item name="android:layout_marginBottom">@dimen/medium_padding</item>
-        <item name="layout_constraintBottom_toTopOf">@+id/binge_widget_rail</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:text">Watch Next</item>
         <item name="android:textSize">18sp</item>
@@ -56,26 +31,15 @@
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginBottom">@dimen/big_padding</item>
-        <item name="layout_constraintTop_toTopOf">parent</item>
-        <item name="layout_constraintBottom_toBottomOf">parent</item>
+        <item name="layout_constraintBottom_toTopOf">@+id/binge_widget_cancel_button</item>
     </style>
 
     <style name="MotionLayout.binge_widget_cancel_button">
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_width">120dp</item>
+        <item name="layout_constraintBottom_toBottomOf">parent</item>
         <item name="android:layout_marginStart">@dimen/small_padding</item>
-        <item name="android:layout_marginTop">@dimen/medium_padding</item>
-        <item name="layout_constraintTop_toBottomOf">@+id/binge_widget_rail</item>
         <item name="android:text">Cancel</item>
-    </style>
-
-
-
-
-
-    <style name="itemStyle">
-        <item name="android:layout_width">64dp</item>
-        <item name="android:layout_height">64dp</item>
     </style>
 
 </resources>
